<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="projetmob.mangadeck.login.LoginFragment"
        android:label="@string/login_page_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="projetmob.mangadeck.list.ListFragment"
        android:label="@string/list_page_title"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="projetmob.mangadeck.register.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="projetmob.mangadeck.detail.DetailFragment"
        android:label="@string/fragment_detail"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="mangaProperty"
            app:argType="projetmob.mangadeck.model.MangaProperty" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="projetmob.mangadeck.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/profileFragment"
        android:name="projetmob.mangadeck.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>